# circom-witnesscalc

./: .gitignore  Cargo.toml  Makefile  check_witnesscalc.sh  test_circuits.sh  test_circuits_vm.sh  test_circuits_vm2.sh
src/: ast.rs  field.rs  lib.rs  storage.rs  vm2.rs  vm2_setup.rs
src/parser/: mod.rs
test_circuits/: circuit11_key_expansion.circom  circuit14_call_template.circom  circuit16_function_call.circom  circuit17_issue18.circom  circuit18_issue13.circom  circuit18_issue13_inputs.json  circuit19_test.circom  circuit20.circom  circuit21.circom  circuit21_inputs.json  circuit23_array_inputs.circom  circuit23_array_inputs_inputs.json  circuit4.circom  circuit5_poseidon.circom  circuit6_num2bits.circom  circuit7_poseidon4.circom  circuit8_sha256_512.circom  circuit_bnot_simple.circom  circuit_or_test.circom  circuit_or_test_inputs.json
tests/cvm-compile/data/: test_array_inputs__cvm.txt  test_array_inputs__sym.txt
tests/vm2_setup/data/: test_array_inputs__bc2.wcd  test_init_signals__bc2.wcd  test_init_signals__cvm.txt  test_init_signals__inputs.json  test_init_signals__sym.txt
