[package]
name = "circom-witnesscalc"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/iden3/circom-witnesscalc"
authors = ["Oleh Lomaka <oleg.lomaka@gmail.com>"]
description = "Witness calculator for Circom circuits"
license = "MIT OR Apache-2.0"

[features]
default = []
print_opcode = []
debug_vm2 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-ff = { version = "0.5.0", features = ["std", "asm"] }
ark-serialize = { version = "0.5.0", features = ["derive"] }
byteorder = "1.4.3"
rand = "0.8.5"
ruint = { version = "1.13.1", features = ["rand", "serde", "num-traits"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.64"
wtns-file = "0.1.5"
libc = "0.2.155"
# circom dependencies
#compiler = { path = "../circom/compiler" }
#code_producers = { path = "../circom/code_producers" }
#program_structure = { path = "../circom/program_structure" }
#parser = { path = "../circom/parser" }
#type_analysis = { path = "../circom/type_analysis" }
#constraint_generation = { path = "../circom/constraint_generation" }
prost = "0.13.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
anyhow = "1.0.97"
indicatif = "0.17.11"
memmap2 = "0.9.5"
tempfile = "3.19.1"
winnow = "0.7.7"
thiserror = "2.0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# debug = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
#bindgen = "0.71.1"
# Using this version where this issue has already being fixed: https://github.com/rust-lang/rust-bindgen/issues/3181
# version 'sim' in target triple 'aarch64-apple-ios-sim' is invalid
# TODO: return to use a specific version once a new release with the fix is available
bindgen = { git = "https://github.com/rust-lang/rust-bindgen", rev = "97ab9152b5edb1fda1ced9bc1604f5e4dc9cfaa9" }
prost-build = "0.13.3"

[workspace]
members = ["extensions/build-circuit", "extensions/compiler"]
